// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"size":{"base":"x-small","xs":"small","s":"medium","m":"large","l":"x-large","xl":"inherit"},"hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":{"base":"start","xs":"end","s":"start","m":"end","l":"start","xl":"end"},"theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
@media(min-width:480px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:760px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1000px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:1300px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1760px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(min-width:480px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: 1rem;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
    order: 0;
  }
}

@media(min-width:760px) {
  .root {
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
    order: -1;
  }
}

@media(min-width:1000px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
    order: 0;
  }
}

@media(min-width:1300px) {
  .root {
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
    order: -1;
  }
}

@media(min-width:1760px) {
  .root {
    justify-content: flex-start;
    align-items: flex-start;
    font-size: inherit;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
    order: 0;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":{"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false},"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(min-width:480px) {
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
  }
}

@media(min-width:760px) {
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
  }
}

@media(min-width:1000px) {
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
  }
}

@media(min-width:1300px) {
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    white-space: nowrap;
    text-indent: -999999px;
  }
}

@media(min-width:1760px) {
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    position: relative;
    top: auto;
    left: auto;
    right: auto;
    bottom: auto;
    white-space: inherit;
    text-indent: 0;
    z-index: 1;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"dark"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #FBFCFF;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"left","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"right","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":true,"alignLabel":"end","theme":"light"} 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  white-space: nowrap;
  text-indent: -999999px;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":true,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #949598;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: not-allowed;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":true,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"light"} 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #949598;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: not-allowed;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":true,"isLoading":false,"isDisabledOrLoading":false,"stretch":true,"size":"x-large","hideLabel":false,"alignLabel":"start","theme":"dark"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #FBFCFF;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: rgba(148, 149, 152, .18);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":true,"isLoading":false,"isDisabledOrLoading":false,"stretch":true,"size":"x-large","hideLabel":false,"alignLabel":"start","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: rgba(148, 149, 152, .18);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: -1;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"arrow-head-right","iconSource":"","active":true,"isLoading":false,"isDisabledOrLoading":true,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #949598;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: not-allowed;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: rgba(148, 149, 152, .18);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  position: relative;
  top: auto;
  left: auto;
  right: auto;
  bottom: auto;
  white-space: inherit;
  text-indent: 0;
  z-index: 1;
  order: 0;
}
.icon {
  position: relative;
  flex-shrink: 0;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"inherit","hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: inherit;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: relative;
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: relative;
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","iconSource":"","active":false,"isLoading":false,"isDisabledOrLoading":false,"stretch":false,"size":{"base":"x-small","xs":"small","s":"medium","m":"large","l":"x-large","xl":"inherit"},"hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #010205;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: pointer;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: relative;
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
@media(min-width:480px) {
  .root {
    font-size: 1rem;
  }
}

@media(min-width:760px) {
  .root {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
}

@media(min-width:1000px) {
  .root {
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
  }
}

@media(min-width:1300px) {
  .root {
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  }
}

@media(min-width:1760px) {
  .root {
    font-size: inherit;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: rgba(148, 149, 152, .18);
  }
}
"
`;

exports[`getComponentCss() should return correct css for {"icon":"none","iconSource":"","active":false,"isLoading":true,"isDisabledOrLoading":true,"stretch":false,"size":"small","hideLabel":false,"alignLabel":"end","theme":"light"} 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  outline: 0 !important;
  color-scheme: light dark !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
.root {
  display: flex;
  gap: 4px;
  width: 100%;
  padding: 0;
  margin: 0;
  color: #949598;
  outline: 0;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  text-align: start;
  border: 0;
  cursor: not-allowed;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.root:focus::before {
  border: 2px solid #1A44EA;
}
.root:not(:focus-visible)::before {
  border: 0;
}
.label {
  transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: relative;
  opacity: 0;
}
.icon {
  position: absolute;
  top: 0;
  left: calc(50% - calc(6px + 2.125ex) / 2);
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.status {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}"
`;
